# ignition-exchange-scraper-v3

./: .flake8  .gitignore  CLAUDE.md  DEVELOPMENT.md  QUICK_START.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: README.md  docker-compose.yml
docs/: DECISION_REQUIRED.md  DEPLOYMENT_READY.md  IGNITION_SETUP.md  PERSPECTIVE_DASHBOARD.md  POC_ANALYSIS.md  PROJECT_STATUS.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
ignition-project/: GATEWAY_SCRIPTS_IMPORT.md
ignition-project/gateway-scripts/: exchangeScraperAPI.py  exchangeScraperNotifications.py  exchangeScraperScheduler.py
ignition-project/named-queries/: GetConfig.sql  GetLatestChanges.sql  GetLatestResults.sql  GetPreviousResults.sql  GetRecentJobs.sql  GetRecentLogs.sql  GetScraperStatus.sql  GetStatistics.sql  README.md  UpdateConfig.sql
scraper-service/: .env.example  Dockerfile  cli.py  requirements.txt
scraper-service/app/: __init__.py  api.py  config.py  database.py  scraper_engine.py
scripts/: ignition_setup.py
sql/: schema.sql
tests/: jsoup_test.py
