[project]
name = "ignition-exchange-scraper-v3"
version = "3.0.0"
description = "Automated Ignition Exchange scraper with FastAPI service"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[project.urls]
Repository = "https://github.com/nigelgwork/ignition-exchange-scraper-v3"

# Black - Code Formatter
[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Directories
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist

  # Specific files
  | ignition-project/gateway-scripts/.*\.py  # Jython 2.7 scripts - don't format
)/
'''

# isort - Import Sorting
[tool.isort]
profile = "black"  # Ensures compatibility with black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "venv/*",
    ".venv/*",
    "env/*",
    "ignition-project/gateway-scripts/*",  # Jython 2.7 scripts
]
known_first_party = ["app"]
known_third_party = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "playwright",
    "beautifulsoup4",
    "psycopg2",
]

# Bandit - Security Linting
[tool.bandit]
exclude_dirs = [
    "tests/",
    "venv/",
    ".venv/",
    "env/",
]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

# Bandit Skip Codes Explained:
# B101 = assert_used - We use asserts in tests, that's fine
# B601 = paramiko_calls - Not relevant to this project

# Bandit Test Codes Enabled:
# B201 = flask_debug_true - Check for debug mode in production
# B301 = pickle - Insecure deserialization
# (All other default tests remain enabled)
